examples/test/testpolicy13277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13277
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key16: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value47
          key16: value32
          key35: value41
      podSelector:
        matchLabels:
          key42: value44
